<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context="com.caojian.myworkapp.ui.activity.RegisterActivity">

    <!-- Login progress -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:theme="@style/AppMainTheme">

                <EditText
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="手机号码"
                    android:inputType="number"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:theme="@style/AppMainTheme">

                <EditText
                    android:id="@+id/register_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="昵称"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:theme="@style/AppMainTheme">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/get_code"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:onClick="verityCode"
                    android:text="获取验证码" />

                <TextView
                    android:id="@+id/code_time"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/radius_back"
                    android:gravity="center"
                    android:text=""
                    android:visibility="gone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:theme="@style/AppMainTheme">

                    <EditText
                        android:id="@+id/verity_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="验证码"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="验证码"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_radius"
                android:layout_marginBottom="15dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

</LinearLayout>
