<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_gray"
    tools:context="com.caojian.myworkapp.ui.activity.RailSelectActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/friend_select"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:onClick="selectRailFriend"
        android:layout_below="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="选择观察好友"/>
        <TextView
            android:id="@+id/select_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/time_select_body"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/friend_select">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="开始时间"/>
        <TextView
            android:id="@+id/tv_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp"
            android:gravity="center"
            android:background="@drawable/btn_select"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            android:onClick="showTimeSelect"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="结束时间" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:background="@drawable/btn_select"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:onClick="showTimeSelect"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/select_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:gravity="center|left"
        android:background="@color/white"
        android:layout_below="@+id/time_select_body"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|left"
            android:text="@string/track_query_option_process"
            android:textColor="@color/list_item_title"
            android:textSize="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="1">

            <CheckBox
                android:id="@+id/processed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:minHeight="25dp"
                android:checked="true"
                android:text="@string/processed"
                android:textColor="@color/list_item_desc"
                android:textSize="12dp"
                android:button="@drawable/chk_selector"/>

            <CheckBox
                android:id="@+id/denoise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:minHeight="25dp"
                android:text="@string/denoise"
                android:textColor="@color/list_item_desc"
                android:textSize="12dp"
                android:button="@drawable/chk_selector"/>

            <CheckBox
                android:id="@+id/vacuate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/vacuate"
                android:textColor="@color/list_item_desc"
                android:minHeight="25dp"
                android:textSize="12dp"
                android:button="@drawable/chk_selector"/>


            <CheckBox
                android:id="@+id/mapmatch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/mapmatch"
                android:textColor="@color/list_item_desc"
                android:minHeight="25dp"
                android:textSize="12dp"
                android:button="@drawable/chk_selector"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/select_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"

        android:layout_below="@+id/time_select_body">
        <TextView
            android:id="@+id/tv_ground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="选择观察范围"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ground"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentLeft="true"
                    android:text="第一个点"/>
                <TextView
                    android:id="@+id/first_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_select"
                    android:onClick="go2SelectPoint"
                    android:layout_marginLeft="100dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentLeft="true"
                    android:text="第二个点"/>
                <TextView
                    android:id="@+id/second_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:background="@drawable/btn_select"
                    android:onClick="go2SelectPoint"
                    android:layout_marginLeft="100dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentLeft="true"
                    android:text="第三个点"/>
                <TextView
                    android:id="@+id/third_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_select"
                    android:onClick="go2SelectPoint"
                    android:layout_marginLeft="100dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentLeft="true"
                    android:text="第四个点"/>
                <TextView
                    android:id="@+id/fourth_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_select"
                    android:onClick="go2SelectPoint"
                    android:layout_marginLeft="100dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/btn_radius"
        android:text="确 定"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="submitMsg">
    </Button>
</RelativeLayout>
